--- a/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
@@ -107,6 +107,7 @@
     <Compile Include="DataSlices\DataSliceContextBaseCmdlet.cs" />
     <Compile Include="DataSlices\GetAzureDataFactoryRunCommand.cs" />
     <Compile Include="DataSlices\GetAzureDataFactorySliceCommand.cs" />
+    <Compile Include="DataSlices\SaveAzureDataFactoryLog.cs" />
     <Compile Include="DataSlices\SetAzureDataFactorySliceStatusCommand.cs" />
     <Compile Include="Gateway\GetAzureDataFactoryGatewayCommand.cs" />
     <Compile Include="Gateway\NewAzureDataFactoryGatewayCommand.cs" />
