Add New-AzureDataFactoryEncryptValue cmdlet a) This cmdlet is used for encrypting a connection string for azure data factory on-premises gateway scenario,     and for encrypting a sensitive string for azure data factory cloud scenario. This change set only contains the on-premises     encryption scenario. The clould scenario will be added in the other PR by the other developer. b) Add related unit test case.

--- a/src/ResourceManager/DataFactories/Commands.DataFactories.Test/Commands.DataFactories.Test.csproj
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories.Test/Commands.DataFactories.Test.csproj
@@ -131,6 +131,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UnitTests\NewDataFactoryEncryptValueTests.cs" />
     <Compile Include="ScenarioTests\DataFactoryGatewayTests.cs" />
     <Compile Include="ScenarioTests\LinkedServiceTests.cs" />
     <Compile Include="UnitTests\DataFactoryUnitTestBase.cs" />
