--- a/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories/Commands.DataFactories.csproj
@@ -52,6 +52,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Microsoft.Azure.Management.DataFactories.0.9.0-preview\lib\portable-net45+sl50+wp80+win\Microsoft.Azure.Management.DataFactories.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.DataTransfer.Gateway.Encryption">
+      <HintPath>..\..\..\packages\Microsoft.DataTransfer.Gateway.Encryption.1.0.0-preview\lib\net45\Microsoft.DataTransfer.Gateway.Encryption.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Threading.Tasks">
       <HintPath>..\..\..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
     </Reference>
@@ -118,6 +121,7 @@
     <Compile Include="LinkedServices\LinkedServiceContextBaseCmdlet.cs" />
     <Compile Include="Models\CreatePSPipelineParameters.cs" />
     <Compile Include="Models\DataFactoryClient.DataSlices.cs" />
+    <Compile Include="Models\DataFactoryClient.Encrypt.cs" />
     <Compile Include="Models\DataFactoryClient.Gateway.cs" />
     <Compile Include="Models\CreatePSTableParameters.cs" />
     <Compile Include="Models\DataFactoryClient.Tables.cs" />
@@ -153,6 +157,7 @@
     <Compile Include="Pipelines\ResumeAzureDataFactoryPipelineCommand.cs" />
     <Compile Include="Pipelines\SetAzureDataFactoryPipelineActivePeriodCommand.cs" />
     <Compile Include="Pipelines\SuspendAzureDataFactoryPipelineCommand.cs" />
+    <Compile Include="Encrypt\NewAzureDataFactoryEncryptValueCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
