--- a/src/ResourceManager/Batch/Commands.Batch.Test/packages.config
+++ b/src/ResourceManager/Batch/Commands.Batch.Test/packages.config
@@ -2,8 +2,11 @@
 <packages>
   <package id="Hydra.HttpRecorder" version="1.0.5379.31313-prerelease" targetFramework="net45" />
   <package id="Hydra.SpecTestSupport" version="1.0.5379.31313-prerelease" targetFramework="net45" />
+  <package id="Microsoft.Azure.Gallery" version="2.2.0-preview" targetFramework="net45" />
+  <package id="Microsoft.Azure.Management.Authorization" version="0.11.0-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Batch" version="1.1.1-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Resources" version="2.6.0-preview" targetFramework="net45" />
+  <package id="Microsoft.Azure.Monitoring" version="2.2.0-preview" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
