--- a/src/ResourceManager/DataFactories/Commands.DataFactories.Test/packages.config
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories.Test/packages.config
@@ -4,7 +4,7 @@
   <package id="Hydra.SpecTestSupport" version="1.0.5366.29353-prerelease" targetFramework="net45" />
   <package id="Microsoft.Azure.Gallery" version="2.2.0-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Authorization" version="0.11.0-preview" targetFramework="net45" />
-  <package id="Microsoft.Azure.Management.DataFactories" version="0.9.0-preview" targetFramework="net45" />
+  <package id="Microsoft.Azure.Management.DataFactories" version="0.10.0-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Resources" version="2.7.0-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Monitoring" version="2.2.0-preview" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
@@ -12,6 +12,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.9.10826.1824" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Common" version="1.3.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Common.Dependencies" version="1.1.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net45" />
