Small changes to Compute cmdlets

--- a/src/ServiceManagement/Compute/Commands.ServiceManagement/Commands.ServiceManagement.csproj
+++ b/src/ServiceManagement/Compute/Commands.ServiceManagement/Commands.ServiceManagement.csproj
@@ -202,14 +202,17 @@
     <Compile Include="IaaS\Extensions\MicrosoftAntimalware\VirtualMachineMicrosoftAntimalwareExtensionContext.cs" />
     <Compile Include="IaaS\Network\AddAzureDns.cs" />
     <Compile Include="IaaS\Network\GetAzureInternalLoadBalancer.cs" />
+    <Compile Include="IaaS\Network\GetAzureNetworkSecurityGroupForVm.cs" />
     <Compile Include="IaaS\Network\NewAzureInternalLoadBalancerConfig.cs" />
     <Compile Include="IaaS\Network\RemoveAzureDns.cs" />
     <Compile Include="IaaS\Network\RemoveAzureInternalLoadBalancer.cs" />
     <Compile Include="IaaS\Network\AddAzureInternalLoadBalancer.cs" />
+    <Compile Include="IaaS\Network\RemoveAzureNetworkSecurityGroupFromVM.cs" />
     <Compile Include="IaaS\Network\RemoveAzurePublicIP.cs" />
     <Compile Include="IaaS\Network\GetAzurePublicIP.cs" />
     <Compile Include="IaaS\Network\SetAzureDns.cs" />
     <Compile Include="IaaS\Network\SetAzureInternalLoadBalancer.cs" />
+    <Compile Include="IaaS\Network\SetAzureNetworkSecurityGroupForVM.cs" />
     <Compile Include="IaaS\Network\SetAzurePublicIP.cs" />
     <Compile Include="Model\InternalLoadBalancerSetting.cs" />
     <Compile Include="Model\InternalLoadBalancerContext.cs" />
@@ -486,6 +489,10 @@
     <ProjectReference Include="..\..\..\Common\Commands.Common\Commands.Common.csproj">
       <Project>{5ee72c53-1720-4309-b54b-5fb79703195f}</Project>
       <Name>Commands.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Network\Commands.Network\Commands.Network.csproj">
+      <Project>{40fee0bb-fd45-4efc-85bc-0d602a6892c4}</Project>
+      <Name>Commands.Network</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Services\Commands.Utilities\Commands.Utilities.csproj">
       <Project>{4900ec4e-8deb-4412-9108-0bc52f81d457}</Project>
