--- a/AzurePowershell.Test.targets
+++ b/AzurePowershell.Test.targets
@@ -236,5 +236,15 @@
       ContinueOnError="false" />
   </Target>
 
+  <ItemGroup>
+    <LiveTestDlls Include=".\**\bin\$(Configuration)\*.Tests.dll" />    
+  </ItemGroup>
+  
+  <Target Name="RunLiveTests"> 
+    <MakeDir Directories="TestResults"/> 
+    <Exec Command="packages\xunit.runners.1.9.2\tools\xunit.console.clr4.exe  @(LiveTestDlls) /trait &quot;AcceptanceType=LiveBVT&quot; /html &quot;TestResults\LiveScenarioTest.%(Filename).html&quot;" />
+  </Target> 
+
+
 </Project>
 
