--- a/AzurePowershell.Test.targets
+++ b/AzurePowershell.Test.targets
@@ -242,7 +242,7 @@
 
   <Target Name="LiveTests"> 
     <MakeDir Directories="TestResults"/> 
-    <Exec Command="packages\xunit.runners.1.9.2\tools\xunit.console.clr4.exe  @(LiveTestDlls) /trait &quot;AcceptanceType=LiveBVT&quot; /html &quot;TestResults\LiveScenarioTest.%(Filename).html&quot;" />
+    <Exec Command="packages\xunit.runners.1.9.2\tools\xunit.console.clr4.exe  @(LiveTestDlls) /trait &quot;AcceptanceType=LiveBVT&quot; /html &quot;TestResults\Live.%(Filename).html&quot;" />
   </Target> 
 
 
