Get slot config only if production slot is requested

--- a/src/ServiceManagement/Services/Commands.Utilities/Commands.Utilities.csproj
+++ b/src/ServiceManagement/Services/Commands.Utilities/Commands.Utilities.csproj
@@ -321,6 +321,7 @@
     <Compile Include="Websites\PSContinuousWebJob.cs" />
     <Compile Include="Websites\PSTriggeredWebJob.cs" />
     <Compile Include="Websites\Services\WebEntities\WebHostingPlan.cs" />
+    <Compile Include="Websites\SiteNameParser.cs" />
     <Compile Include="Websites\WebsiteInstance.cs" />
     <Compile Include="Websites\IWebsitesClient.cs" />
     <Compile Include="Websites\KuduRemoteClientBase.cs" />
